--- a/public/style.css
+++ b/public/style.css
@@ -113,7 +113,7 @@
   margin: 0 15%;
 }
 
-h1 {
+header {
   height: 6vw;
   width: 100%;
   display: flex;
@@ -446,7 +446,7 @@ label {
     margin: 0;
   }
 
-  h1 {
+  header {
     width: 100%;
     height: 3vw;
     display: flex;
@@ -768,7 +768,7 @@ label {
     margin: 0;
   }
 
-  h1 {
+  header {
     height: 13vw;
     display: flex;
     flex-direction: column;
