--- a/sass/Layout/_header-port.scss
+++ b/sass/Layout/_header-port.scss
@@ -8,9 +8,10 @@ header {
     margin: 0;
     padding-top: 0;
 }
-h1 img {
-    height: 7vw;
-    width: 40vw;
-    object-fit: contain;
-    padding-top: 3vw;
+h1 {
+    font-size: 1.7rem;
+    color: black;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    padding-top: 10px;
 }
