--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-style: normal;
 }
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import "Composants/function.scss";
 @import "Composants/keyframes.scss";
 @import "Composants/mixins.scss";
