--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @font-face {
   font-family: Roboto;
   src: url("../assets/Font/Roboto-Regular.ttf");
@@ -9,12 +10,6 @@
   font-family: Roboto;
   src: url("../assets/Font/Roboto-Bold.ttf");
   font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: Shrikhand;
-  src: url("../assets/Font/Shrikhand-Regular.ttf");
-  font-weight: normal;
   font-style: normal;
 }
 @keyframes spinner {
@@ -126,18 +121,11 @@
   position: relative;
 }
 #tete h1 {
-  height: 8vw;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-}
-#tete h1 img {
-  width: 20vw;
-  object-fit: contain;
+  font-size: 4rem;
+  color: black;
+  font-family: "Shrikhand", cursive;
+  font-weight: bold;
+  text-align: center;
 }
 #tete a {
   position: absolute;
@@ -387,15 +375,15 @@
   background-color: #343434;
 }
 
-.img-footer {
-  margin-bottom: 10px;
-  margin-top: 5px;
-}
-.img-footer img {
-  height: 5vw;
-  width: 200px;
-  object-fit: contain;
+h4 {
+  margin-bottom: 20px;
+  margin-top: 15px;
   margin-left: 2vw;
+  font-size: 1.9rem;
+  color: white;
+  font-family: "Shrikhand", cursive;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
 .proposer, .partenaire, .legale, .contact {
@@ -431,24 +419,15 @@
 
   #tete {
     width: 100%;
-    height: auto;
+    height: 6vw;
     position: relative;
   }
   #tete h1 {
-    width: 100%;
-    height: 3vw;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding-top: 2vw;
-  }
-  #tete h1 img {
-    width: 25vw;
-    object-fit: contain;
-    padding-top: 3vw;
+    font-size: 3.5rem;
+    color: black;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    text-align: center;
   }
   #tete a {
     position: absolute;
@@ -744,25 +723,15 @@
 
   #tete {
     width: 100%;
-    height: auto;
+    height: 13vw;
     position: relative;
-    margin-top: 1vw;
   }
   #tete h1 {
-    height: 7vw;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    margin: 0;
-    margin-bottom: 2vw;
-  }
-  #tete h1 img {
-    height: 7vw;
-    width: 40vw;
-    object-fit: contain;
-    padding-top: 0vw;
+    font-size: 1.7rem;
+    color: black;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    padding-top: 1vw;
   }
   #tete a {
     position: absolute;
@@ -1017,14 +986,15 @@
     top: 0;
   }
 
-  .img-footer {
-    margin-bottom: 2vw;
-  }
-  .img-footer img {
-    height: 9vw;
-    width: 23vw;
-    object-fit: contain;
+  h4 {
+    margin-bottom: 20px;
+    margin-top: 5px;
     margin-left: 5vw;
+    font-size: 1rem;
+    color: white;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
   }
 
   .proposer, .partenaire, .legale, .contact {
