--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @font-face {
   font-family: Roboto;
   src: url("../assets/Font/Roboto-Regular.ttf");
@@ -114,7 +115,7 @@
 }
 
 header {
-  height: 6vw;
+  height: 8vw;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -124,9 +125,11 @@ header {
   margin: 0;
 }
 
-h1 img {
-  width: 20vw;
-  object-fit: contain;
+h1 {
+  font-size: 4rem;
+  color: black;
+  font-family: "Shrikhand", cursive;
+  font-weight: bold;
 }
 
 form {
@@ -404,15 +407,15 @@ label {
   background-color: #343434;
 }
 
-.img-footer {
-  margin-bottom: 10px;
-  margin-top: 5px;
-}
-.img-footer img {
-  height: 5vw;
-  width: 200px;
-  object-fit: contain;
+h4 {
+  margin-bottom: 20px;
+  margin-top: 15px;
   margin-left: 2vw;
+  font-size: 1.9rem;
+  color: white;
+  font-family: "Shrikhand", cursive;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
 .proposer, .partenaire, .legale, .contact {
@@ -448,7 +451,7 @@ label {
 
   header {
     width: 100%;
-    height: 3vw;
+    height: 4vw;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -458,10 +461,12 @@ label {
     padding-top: 15px;
   }
 
-  h1 img {
-    width: 25vw;
-    object-fit: contain;
-    padding-top: 3vw;
+  h1 {
+    font-size: 3.5rem;
+    color: black;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    padding-top: 20px;
   }
 
   form {
@@ -731,14 +736,15 @@ label {
     padding-top: 0;
   }
 
-  .img-footer {
-    margin-bottom: 2vw;
-  }
-  .img-footer img {
-    height: 9vw;
-    width: 23vw;
-    object-fit: contain;
+  h4 {
+    margin-bottom: 20px;
+    margin-top: 15px;
     margin-left: 5vw;
+    font-size: 1.7rem;
+    color: white;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
   }
 
   .proposer, .partenaire, .legale, .contact {
@@ -779,11 +785,12 @@ label {
     padding-top: 0;
   }
 
-  h1 img {
-    height: 7vw;
-    width: 40vw;
-    object-fit: contain;
-    padding-top: 3vw;
+  h1 {
+    font-size: 1.7rem;
+    color: black;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    padding-top: 10px;
   }
 
   form {
@@ -1049,14 +1056,15 @@ label {
     padding-top: 3vw;
   }
 
-  .img-footer {
-    margin-bottom: 2vw;
-  }
-  .img-footer img {
-    height: 9vw;
-    width: 23vw;
-    object-fit: contain;
+  h4 {
+    margin-bottom: 20px;
+    margin-top: 5px;
     margin-left: 5vw;
+    font-size: 1rem;
+    color: white;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
   }
 
   .proposer, .partenaire, .legale, .contact {
