--- a/sass/Layout/_header-desk.scss
+++ b/sass/Layout/_header-desk.scss
@@ -1,5 +1,5 @@
 header {
-    height: 6vw;
+    height: 7vw;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -8,7 +8,9 @@ header {
     align-items: center;
     margin: 0;
 }
-h1 img {
-    width: 20vw;
-    object-fit: contain;
+h1 {
+    font-size: 4rem;
+    color: black;
+    font-family: 'Shrikhand', cursive;
+    font-weight: bold;
 }
