--- a/sass/Layout/_header-tab.scss
+++ b/sass/Layout/_header-tab.scss
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 3vw;
+    height: 4vw;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -9,8 +9,10 @@ header {
     margin: 0;
     padding-top: 15px;
 }
-h1 img {
-    width: 25vw;
-    object-fit: contain;
-    padding-top: 3vw;
+h1 {
+    font-size: 3.5rem;
+    color: black;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    padding-top: 20px;
 }
