--- a/sass/Layout/_m-header-desk.scss
+++ b/sass/Layout/_m-header-desk.scss
@@ -3,18 +3,11 @@
     height: 7vw;
     position: relative;
     & h1 {
-        height: 8vw;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        & img {
-            width: 20vw;
-            object-fit: contain;
-            }
+        font-size: 4rem;
+        color: black;
+        font-family: 'Shrikhand', cursive;
+        font-weight: bold;
+        text-align: center;
         }
         & a {
             position: absolute;
