--- a/sass/Layout/_m-header-tab.scss
+++ b/sass/Layout/_m-header-tab.scss
@@ -1,30 +1,21 @@
 #tete {
     width: 100%;
-    height: auto;
+    height: 6vw;
     position: relative;
-        & h1 {
-            width: 100%;
-            height: 3vw;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            padding-top: 2vw;
-            & img {
-                width: 25vw;
-                object-fit: contain;
-                padding-top: 3vw;
-                }
-            }
-        & a {
-            position: absolute;
-            top: 3vw;
-            left: 5vw;
-            font-size: 1.5rem;
-            color: black;
-            opacity: 80%;
-            text-decoration: none;
-            }
+    & h1 {
+        font-size: 3.5rem;
+        color: black;
+        font-family: 'Shrikhand', cursive;
+        font-weight: bold;
+        text-align: center;
         }
+    & a {
+    position: absolute;
+    top: 3vw;
+    left: 5vw;
+    font-size: 1.5rem;
+    color: black;
+    opacity: 80%;
+    text-decoration: none;
+    }
+}
