--- a/sass/Themes/_footer-desk.scss
+++ b/sass/Themes/_footer-desk.scss
@@ -6,31 +6,31 @@
     width: 100vw;
     background-color: darken($c-grey, 76.2%);
 }
-    .img-footer {
-        margin-bottom: 10px;
-        margin-top: 5px;
-        & img {
-            height: 5vw;
-            width: 200px;
-            object-fit: contain;
-            margin-left: 2vw;
-        }
-    }
-    .proposer, .partenaire, .legale, .contact {
-        text-decoration: none;
-        color: white;
+h4 {
+    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-left: 2vw;
+    font-size: 1.9rem;
+    color: white;
+    font-family: 'Shrikhand', cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+.proposer, .partenaire, .legale, .contact {
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    padding-bottom: 10px;
+    & i {
+        position: fixed;
+        left: 2vw;
         font-size: 1rem;
-        padding-bottom: 10px;
-        & i {
-            position: fixed;
-            left: 2vw;
-            font-size: 1rem;
-        }
-        & span {
-            margin-left: 5vw;
-            font-size: 1rem;
-        }
     }
-    .legale, .contact {
-        margin-left: 2vw;
+    & span {
+        margin-left: 5vw;
+        font-size: 1rem;
     }
+}
+.legale, .contact {
+    margin-left: 2vw;
+}
