--- a/sass/Themes/_footer-port.scss
+++ b/sass/Themes/_footer-port.scss
@@ -7,31 +7,32 @@
     background-color: darken($c-grey, 76.2%);
     padding-top: 3vw;
 }
-.img-footer {
-    margin-bottom: 2vw;
-    & img {
-        height: 9vw;
-        width: 23vw;
-        object-fit: contain;
-        margin-left: 5vw;
+h4 {
+    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-left: 5vw;
+    font-size: 1rem;
+    color: white;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+.proposer, .partenaire, .legale, .contact {
+    text-decoration: none;
+    color: white;
+    font-size: 0.9rem;
+    padding-bottom: 2vw;
+    position: relative;
+    & i {
+        position: absolute;
+        left: 5vw;
+        font-size: 1rem;
+    }
+    & span {
+        margin-left: 11vw;
+        font-size: 0.9rem;
     }
 }
-    .proposer, .partenaire, .legale, .contact {
-        text-decoration: none;
-        color: white;
-        font-size: 0.9rem;
-        padding-bottom: 2vw;
-        position: relative;
-        & i {
-            position: absolute;
-            left: 5vw;
-            font-size: 1rem;
-        }
-        & span {
-            margin-left: 11vw;
-            font-size: 0.9rem;
-        }
-    }
-    .legale, .contact {
-        margin-left: 5vw;
-    }
+.legale, .contact {
+    margin-left: 5vw;
+}
