--- a/sass/Themes/_footer-tab.scss
+++ b/sass/Themes/_footer-tab.scss
@@ -7,30 +7,31 @@
     background-color: darken($c-grey, 76.2%);
     padding-top: 0;
 }
-    .img-footer {
-        margin-bottom: 2vw;
-        & img {
-            height: 9vw;
-            width: 23vw;
-            object-fit: contain;
-            margin-left: 5vw;
-        }
-    }
-    .proposer, .partenaire, .legale, .contact {
-        text-decoration: none;
-        color: white;
+h4 {
+    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-left: 5vw;
+    font-size: 1.7rem;
+    color: white;
+    font-family: 'Shrikhand', cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+.proposer, .partenaire, .legale, .contact {
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    padding-bottom: 2vw;
+    & i {
+        position: fixed;
+        left: 5vw;
         font-size: 1rem;
-        padding-bottom: 2vw;
-        & i {
-            position: fixed;
-            left: 5vw;
-            font-size: 1rem;
-        }
-        & span {
-            margin-left: 11vw;
-            font-size: 1rem;
-        }
     }
-    .legale, .contact {
-        margin-left: 5vw;
+    & span {
+        margin-left: 11vw;
+        font-size: 1rem;
     }
+}
+.legale, .contact {
+    margin-left: 5vw;
+}
