--- a/sass/main-menu.scss
+++ b/sass/main-menu.scss
@@ -10,12 +10,7 @@
     font-weight: bold;
     font-style: normal;
 }
-@font-face {
-    font-family: Shrikhand;
-    src: url("../assets/Font/Shrikhand-Regular.ttf");
-    font-weight: normal;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import "Composants/function.scss";
 @import "Composants/keyframes.scss";
 @import "Composants/mixins.scss";
