--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -129,7 +129,7 @@
 }
 #tete a {
   position: absolute;
-  top: 3vw;
+  top: 35px;
   left: 5vw;
   font-size: 1.5rem;
   color: black;
@@ -431,7 +431,7 @@ h4 {
   }
   #tete a {
     position: absolute;
-    top: 3vw;
+    top: 30px;
     left: 5vw;
     font-size: 1.5rem;
     color: black;
@@ -684,14 +684,15 @@ h4 {
     top: 35px;
   }
 
-  .img-footer {
-    margin-bottom: 2vw;
-  }
-  .img-footer img {
-    height: 9vw;
-    width: 23vw;
-    object-fit: contain;
+  h4 {
+    margin-bottom: 20px;
+    margin-top: 15px;
     margin-left: 5vw;
+    font-size: 1.7rem;
+    color: white;
+    font-family: "Shrikhand", cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
   }
 
   .proposer, .partenaire, .legale, .contact {
@@ -735,7 +736,7 @@ h4 {
   }
   #tete a {
     position: absolute;
-    top: 3vw;
+    top: 15px;
     left: 5vw;
     font-size: 1.1rem;
     color: black;
