--- a/sass/Layout/_m-header-port.scss
+++ b/sass/Layout/_m-header-port.scss
@@ -11,7 +11,7 @@
     }
     & a {
         position: absolute;
-        top: 3vw;
+        top: 15px;
         left: 5vw;
         font-size: 1.1rem;
         color: black;
