--- a/sass/Layout/_m-header-tab.scss
+++ b/sass/Layout/_m-header-tab.scss
@@ -11,7 +11,7 @@
         }
     & a {
     position: absolute;
-    top: 3vw;
+    top: 30px;
     left: 5vw;
     font-size: 1.5rem;
     color: black;
