--- a/sass/Layout/_fonctionnement-titre-tab.scss
+++ b/sass/Layout/_fonctionnement-titre-tab.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 40%;
-    margin-top: 7vw;
+    margin-top: 50px;
     position: relative;
     left: 4vw;
     bottom: 40px;
