--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -117,7 +117,7 @@
 
 #tete {
   width: 100%;
-  height: 7vw;
+  height: 100px;
   position: relative;
 }
 #tete h1 {
@@ -419,7 +419,7 @@ h4 {
 
   #tete {
     width: 100%;
-    height: 6vw;
+    height: 40px;
     position: relative;
   }
   #tete h1 {
@@ -463,7 +463,7 @@ h4 {
     padding-right: 3vw;
     padding-bottom: 60px;
     position: relative;
-    top: 4vw;
+    top: 50px;
   }
 
   .nom-resto {
@@ -724,7 +724,7 @@ h4 {
 
   #tete {
     width: 100%;
-    height: 13vw;
+    height: 50px;
     position: relative;
   }
   #tete h1 {
@@ -732,11 +732,11 @@ h4 {
     color: black;
     font-family: "Shrikhand", cursive;
     font-weight: bold;
-    padding-top: 1vw;
+    padding-top: 10px;
   }
   #tete a {
     position: absolute;
-    top: 15px;
+    top: 20px;
     left: 5vw;
     font-size: 1.1rem;
     color: black;
