--- a/public/style.css
+++ b/public/style.css
@@ -115,7 +115,7 @@
 }
 
 header {
-  height: 7vw;
+  height: 100px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -168,11 +168,10 @@ label {
   width: 50%;
   background: #e9e9e9;
   text-align: center;
-  border-top: 3px solid rgba(161, 161, 161, 0.3);
+  border-top: 2px solid rgba(161, 161, 161, 0.3);
   border-bottom: 0;
   border-left: 0;
   border-right: 0;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   order: 0;
   font-size: 1.5rem;
   margin-bottom: 2vw;
@@ -451,7 +450,7 @@ h4 {
 
   header {
     width: 100%;
-    height: 4vw;
+    height: 40px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -473,7 +472,7 @@ h4 {
     background: white;
     width: 55%;
     position: relative;
-    bottom: 25px;
+    bottom: 3vw;
   }
 
   fieldset {
@@ -507,8 +506,7 @@ h4 {
     width: 100%;
     background: #e9e9e9;
     text-align: center;
-    border-top: 3px solid rgba(161, 161, 161, 0.3);
-    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+    border-top: 2px solid rgba(161, 161, 161, 0.3);
     order: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
@@ -568,7 +566,7 @@ h4 {
     display: flex;
     flex-wrap: wrap;
     width: 40%;
-    margin-top: 7vw;
+    margin-top: 50px;
     position: relative;
     left: 4vw;
     bottom: 40px;
@@ -775,7 +773,7 @@ h4 {
   }
 
   header {
-    height: 13vw;
+    height: 50px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -827,8 +825,7 @@ h4 {
     width: 100%;
     background: #e9e9e9;
     text-align: center;
-    border-top: 3px solid rgba(161, 161, 161, 0.3);
-    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+    border-top: 2px solid rgba(161, 161, 161, 0.3);
     order: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
