--- a/sass/Layout/_form-tab.scss
+++ b/sass/Layout/_form-tab.scss
@@ -2,7 +2,7 @@ form {
     background: white;
     width: 55%;
     position: relative;
-    bottom: 25px;
+    bottom: 3vw;
 }
 fieldset {
     border: 0;
@@ -31,8 +31,7 @@ fieldset {
             width: 100%;
             background: darken($color: $c-grey, $amount: 5);
             text-align: center;
-            border-top: 3px solid rgba(161,161,161,0.3);
-            box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+            border-top: 2px solid rgba(161,161,161,0.3);
             order: 0;
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
