--- a/sass/Layout/_header-tab.scss
+++ b/sass/Layout/_header-tab.scss
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 4vw;
+    height: 40px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
