--- a/sass/Layout/_m-header-port.scss
+++ b/sass/Layout/_m-header-port.scss
@@ -1,17 +1,17 @@
 #tete {
     width: 100%;
-    height: 13vw;
+    height: 50px;
     position: relative;
     h1 {
         font-size: 1.7rem;
         color: black;
         font-family: "Shrikhand", cursive;
         font-weight: bold;
-        padding-top: 1vw;
+        padding-top: 10px;
     }
     & a {
         position: absolute;
-        top: 15px;
+        top: 20px;
         left: 5vw;
         font-size: 1.1rem;
         color: black;
